Managed to rotate the wheels + added Demo GUI & second vehicle
Co-Authored-By: FlorisPex <64036156+FlorisPex@users.noreply.github.com>
Co-Authored-By: bsVermeiden <90618788+bsVermeiden@users.noreply.github.com>

--- a/imgui.ini
+++ b/imgui.ini
@@ -9,7 +9,17 @@ Size=550,680
 Collapsed=0
 
 [Window][Hello, world!]
-Pos=64,45
-Size=231,96
+Pos=965,43
+Size=256,158
 Collapsed=0
+
+[Window][Rotation Debugger]
+Pos=44,35
+Size=516,85
+Collapsed=0
+
+[Window][Demo GUI]
+Pos=29,28
+Size=519,168
+Collapsed=1
 
