--- a/pom.xml
+++ b/pom.xml
@@ -370,11 +370,6 @@
             <classifier>${lwjgl.natives}</classifier>
         </dependency>
         <dependency>
-            <groupId>org.lwjgl.lwjgl</groupId>
-            <artifactId>lwjgl_util</artifactId>
-            <version>2.9.3</version>
-        </dependency>
-        <dependency>
             <groupId>io.github.spair</groupId>
             <artifactId>imgui-java-binding</artifactId>
             <version>${imgui.java.version}</version>
@@ -388,6 +383,11 @@
             <groupId>io.github.spair</groupId>
             <artifactId>imgui-java-natives-windows</artifactId>
             <version>${imgui.java.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.joml</groupId>
+            <artifactId>joml</artifactId>
+            <version>1.10.5</version>
         </dependency>
     </dependencies>
 </project>
