Implemented simple Settings menu

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,25 +1,10 @@
-[Window][Debug##Default]
-Pos=60,60
-Size=400,400
+[Window][Settings]
+Pos=1720,0
+Size=200,1009
 Collapsed=0
 
-[Window][Dear ImGui Demo]
-Pos=650,20
-Size=550,680
-Collapsed=0
-
-[Window][Hello, world!]
-Pos=965,43
-Size=256,158
-Collapsed=0
-
-[Window][Rotation Debugger]
-Pos=44,35
-Size=516,85
-Collapsed=0
-
-[Window][Demo GUI]
-Pos=32,22
-Size=619,597
-Collapsed=0
+[Window][Main]
+Pos=0,0
+Size=200,1009
+Collapsed=1
 
