--- a/imgui.ini
+++ b/imgui.ini
@@ -1,10 +1,15 @@
 [Window][Settings]
-Pos=1720,0
-Size=200,1009
+Pos=1080,0
+Size=200,720
 Collapsed=0
 
 [Window][Main]
 Pos=0,0
-Size=200,1009
+Size=200,720
 Collapsed=1
+
+[Window][Debug##Default]
+Pos=60,60
+Size=400,400
+Collapsed=0
 
