--- a/imgui.ini
+++ b/imgui.ini
@@ -1,15 +1,20 @@
 [Window][Settings]
-Pos=1080,0
+Pos=1400,0
 Size=200,720
 Collapsed=0
 
 [Window][Main]
 Pos=0,0
-Size=200,720
+Size=300,720
 Collapsed=0
 
 [Window][Debug##Default]
 Pos=60,60
 Size=400,400
+Collapsed=0
+
+[Window][Add vehicle]
+Pos=650,271
+Size=300,178
 Collapsed=0
 
