--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
         </plugins>
         <resources>
             <resource>
-                <directory>src/main/resources</directory>
+                <directory>res</directory>
             </resource>
         </resources>
         <defaultGoal>package</defaultGoal>
